<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@color/PrimaryColor"
            android:gravity="center">

            <TextView
                android:id="@+id/lblHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giriş Yap"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="italic|bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txtKullaniciAdi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ed_kullanici_adi"
                    android:inputType="textPersonName"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/profile"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="15"
                    app:met_minCharacters="4"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true"
                    app:met_textColorHint="#726d6d" />

                <!--    <requestFocus />-->
                <!--</com.rengwuxian.materialedittext.MaterialEditText>-->

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ed_sifre"
                    android:inputType="textPassword"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/password"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="15"
                    app:met_minCharacters="6"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true"
                    app:met_textColorHint="#726d6d" />


                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/giris_yap"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnYeniHesapOlustur"
                    style="@style/ButtonKisa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/yeni_hesap_olustur"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/txtSifremiUnuttum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="30dp"
                    android:text="Şifremi Unuttum.."
                    android:textColor="#cc0000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>